refactor: 이미지 응답에 전체 url 추가하도록 수정